profileWallet and footer z-index fix

--- a/src/widgets/footer/ui/footer.scss
+++ b/src/widgets/footer/ui/footer.scss
@@ -1,5 +1,5 @@
 footer{
-    z-index: 1000000000000;
+    z-index: 999;
     position: fixed;
     bottom: 0;
     left: 0;
